[package]
authors = ['pandadadig <https://github.com/Space-Pandas>']
build = 'build.rs'
description = 'Substrate based cross chain NFT infrastructure .'
edition = '2018'
homepage = 'https://pandas.land'
license = 'GPL-3.0'
name = 'panda'
repository = 'https://github.com/Space-Pandas/space-panda-nft-chain'
version = '1.0.0'

[[bin]]
name = 'panda'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', tag = 'v3.0.0' }

[dependencies]
log = '0.4.14'
jsonrpc-core = '15.1.0'
serde_json = '1.0'
structopt = '0.3.8'

# local dependencies
panda-runtime = { path = '../runtime', version = '1.0.0' }

# Substrate dependencies
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-babe = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-authority-discovery = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

[features]
default = []
