[package]
authors = ['pandadadig <https://github.com/Space-Pandas>']
build = 'build.rs'
description = 'Substrate based cross chain NFT infrastructure .'
edition = '2018'
homepage = 'https://pandas.land'
license = 'GPL-3.0'
name = 'panda'
repository = 'https://github.com/Space-Pandas/space-panda-nft-chain'
version = '1.0.0'

[[bin]]
name = 'panda'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', tag = 'v3.0.0' }

[dependencies]
log = '0.4.14'
jsonrpc-core = '15.1.0'
serde_json = '1.0'
structopt = '0.3.8'

# local dependencies
panda-runtime = { path = '../runtime', version = '1.0.0' }

# Substrate dependencies
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sc-cli = { features = ['wasmtime'], optional = true, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git',  tag = 'v3.0.0' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sp-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }

[features]
default = []
