[package]
authors = ['pandadadig <https://github.com/Space-Pandas>']
build = 'build.rs'
description = 'Substrate based cross chain NFT infrastructure .'
edition = '2018'
homepage = 'https://pandas.land'
license = 'GPL-3.0'
name = 'panda'
repository = 'https://github.com/Space-Pandas/space-panda-nft-chain'
version = '1.0.0'

[[bin]]
name = 'panda'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', tag = 'v3.0.0' }

[dependencies]
futures = { version = '0.3.9', features = ['compat'] }
log = '0.4.14'
jsonrpc-core = '15.1.0'
jsonrpc-pubsub = '15.1.0'
serde_json = '1.0'
structopt = { version = '0.3.8', optional = true }

# local dependencies
panda-runtime = { path = '../runtime', version = '1.0.0' }
primitives = { package = 'panda-primitives', path = '../primitives', version = '1.0.0'}

# Substrate dependencies
fc-mapping-sync = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
fc-rpc = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda', features = ['rpc_binary_search_estimate'] }
fc-rpc-core = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
fp-rpc = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-contracts = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-ethereum = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-evm = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-cli = { features = ['wasmtime'], optional = true, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git',  tag = 'v3.0.0' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
fc-consensus = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
fc-db = { git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0', optional = true }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-sync-state-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sp-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'  }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }

[features]
default = [ 'cli' ]

cli = [
    'wasmi-errno',
    'sc-cli',
    'sc-finality-grandpa-warp-sync',
    'sc-service/db',
    'structopt',
]

wasmtime = [
    'sc-executor/wasmtime',
]

wasmi-errno = [
    'sc-executor/wasmi-errno',
]
