[package]
authors = ['pandadadig <https://github.com/Space-Pandas>']
edition = '2018'
homepage = 'https://pandas.land'
license = 'GPL-3.0'
name = 'panda-runtime'
repository = 'https://github.com/Space-Pandas/space-panda-nft-chain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, package = 'parity-scale-codec', version = '2.0.0' }
getrandom = { features = ['js'], version = '0.2.3' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
nft-accounts = { default-features = false, package = 'nft-accounts', path = '../pallets/nft-accounts', version = '1.0.0' }
primitives = { default-features = false, package = 'panda-primitives', path = '../primitives', version = '1.0.0'}

# Substrate dependencies
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-authority-discovery = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-babe = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-collective = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-democracy = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-im-online = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-membership = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-offences = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-scheduler = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-staking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-transaction-payment-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
pallet-treasury = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-authority-discovery = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-blockchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-consensus-babe = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-finality-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }
substrate-frame-rpc-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0' }

# Frontier dependencies
fp-rpc = { default-features = false, git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-dynamic-fee = { default-features = false, git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-ethereum = { default-features = false, git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-evm = { default-features = false, git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }
pallet-evm-precompile-simple = { default-features = false, git = 'https://github.com/Space-Pandas/frontier.git', branch = 'spacepanda' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'fp-rpc/std',
    'nft-accounts/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-collective/std',
    'pallet-democracy/std',
    'pallet-dynamic-fee/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-evm-precompile-simple/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-membership/std',
    'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'serde',
    'sp-api/std',
    'sp-authority-discovery/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-staking/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
